Prevent title screen buttons being pushed off screen
Reduce spacing and hide silhouette on shorter screens

--- a/app/static/styles/styles.css
+++ b/app/static/styles/styles.css
@@ -36,10 +36,36 @@ progress.circular {
 	border-top-color: #5492bb;
 }
 
-header.bgFill {
+.bgFill {
 	background-image: url('/static/images/header_bg.png');
 	background-position: center;
 	background-size: cover;
+	
+	-webkit-box-shadow: inset 0 -96px 48px -48px #89c1e2;
+	   -moz-box-shadow: inset 0 -96px 48px -48px #89c1e2;
+	        box-shadow: inset 0 -96px 48px -48px #89c1e2;
+	
+	padding: 16px;
+	margin-bottom: -32px;
+}
+@media (max-height: 700px) {
+	.bgFill {
+		margin-bottom: -64px;
+	}
+}
+@media (max-height: 660px) {
+	.bgFill {
+		margin-bottom: -128px;
+	}
+}
+@media (max-height: 560px) {
+	.silhouette {
+		display: none;
+	}
+	.bgFill {
+		padding-bottom: 144px;
+		margin-bottom: -144px;
+	}
 }
 
 section,
@@ -98,4 +124,3 @@ section.card {
 	margin-right: -16px;
 	margin-left: -16px;
 }
-
